k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: financial-db-app
spec:
  selector:
    app: financial-db-app
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
  type: ClusterIP
